tests/ui/free_desc.stderr
error[E0505]: cannot move out of `conn` because it is borrowed
  --> $DIR/free_desc.rs:33:5
   |
30 |     let (desc, _) = SQLHDESC::SQLAllocHandle(&conn);
   |                                              ----- borrow of `conn` occurs here
...
33 |     conn.SQLFreeHandle();
   |     ^^^^ move out of `conn` occurs here
34 |     desc.SQLFreeHandle();
   |     ---- borrow later used here
